data/derived/comb/progs/unify/prog5436.ml.out
Characters 62-69:
  | x :: y -> x + sumList ;;
                  ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
